# ComfyUI-to-Python-Extension

./: .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  __init__.py  comfyui_to_python.py  comfyui_to_python_utils.py  dianshang_v2.json  ds_off.json  ds_off_noapi.json  gen_sr.json  gen_sr.py  generate_python_code.py  image_matting.json  image_text_matting.json  image_text_to_image.json  install.py  pyproject.toml  requirements.txt  run_tests.py  save_as_script_api.py  utils.py  workflow_api.json  workflow_api.py
.github/workflows/: publish.yml
ComfyUI-to-Python-Extension/: generate_python_code.py
comfyui_to_python/: __init__.py  app.py  cli.py  io.py  load_order.py  node_runtime.py  workflow_loader.py
comfyui_to_python/generator/: __init__.py  generated_helpers.py  model.py  planner.py  render.py
docs/: runtime-validation.md
docs/specs/: runtime-e2e-agent-spec.md  runtime-validation-environment-spec.md  runtime-validation-implementation-spec.md
integration_tests/: README.md  bootstrap_env.py  environment.lock.json  environment.toml  run_against_comfyui.py  scenarios.json
integration_tests/fixtures/: baseline_export_workflow.json  checkpoint_execution_workflow.json  core_upscale_workflow.json  easy_anything_reserved_word_workflow.json  image_roundtrip_execution_workflow.json  impact_wildcard_invalid_kwargs_workflow.json  windows_portable_workflow.json  (+1 more)
js/: save-as-script.js
script_examples/: generate_python_code.py
tests/: README.md  TESTING.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests_isolated.py  test_comfyui_to_python_utils.py  test_custom_nodes.py  test_export_pipeline.py  test_generator_codegen_issue_regressions.py  test_integration_bootstrap.py  test_integration_harness.py  test_isolated.py  test_node_runtime_cleanup.py  test_project_contracts.py  test_regression.py  test_runtime_validation_harness.py  test_upscale_model_loader_export.py
(+16 files in other folders)
